# python-game-jam-10

./: Makefile  README.md  pyproject.toml
assets/: tiles.tsx
maps/: 01.tmx
scripts/: dist.bat  dist.sh  run.py
src/: config.toml
src/pyjam10/: cli.py  config.py  game.py
src/pyjam7/: cli.py  game.py
